src/pages/Pages.css
/* ... */
  .material-symbols-outlined {
    font-variation-settings:
    'FILL' 0,
    'wght' 400,
    'GRAD' 0,
    'opsz' 24
  }


 .home{
    width: 100%;
    height: 100vh;
    position: absolute;
    display:flex;
    justify-content:center;
    align-items:center;
    color: var(--first-color);
    text-decoration: none;
    font-size:var(--name-font-size); 
    font-weight: var(--font-bold);
    
} 

.home .maintitle {
    font-family: var(--title-font);
    color: var(--first-color);
    text-align:center;
    font-weight: 800;
    font-size: 6vw;/* 78px;40px; */
    position:fixed;
    top:20px;
    display:flex;
    justify-content: center;
    z-index: 1;
    
} 
 
.home .canvas {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--bg-color);
    display:flex;
    flex-wrap:wrap;
    font-family: var(--body-font);
    color: var(--first-color);
    z-index: 0; /*Ensure it's below other content */
}


 .page{
    display:flex;
    flex-direction:column;
    justify-content:flex-start;
    align-items:flex-start;
    color: var(--first-color);
    text-decoration: none;
    font-size:var(--name-font-size); 
    font-weight: var(--font-bold);
    background-color:var(--bg-color);
    border-top: 1px solid var(--first-color);
    border-bottom: 3px solid var(--first-color);
    top:0;
    width:100%;
    max-width:100vw;
    margin:0;
    box-sizing:border-box;
    
} 

 .title {
    font-family: var(--title-font);
    color: var(--first-color);
    text-align:center;
    font-weight: 50;
    font-size: calc(min(7vw, 60px));/* 78px;40px; */
    padding-top:100px;
    padding-left:135px;
    padding-bottom:20px;
    display:flex;
    justify-content: center;
    z-index: 1; 
} 
@media only screen and (max-width: 800px) {
    .title{
        padding-left:5%;
        padding-right:5%;
    }  
}

 
.subtitle {
    font-family: var(--title-font);
    color: var(--first-color);
    text-align:left;
    font-weight: 50;
    font-size: calc(min(7vw, 30px));/* 78px;40px; */
   padding-top:30px;
    padding-left:135px;
    z-index: 1;  
    /* height:20px;  */
    display:flex;
    align-items:flex-end;

    /* border:1px solid black; */
}
@media only screen and (max-width: 800px) {
    .subtitle { 
        width: 90%;
        padding-left:5%;
    }
  } 

 .description{
    font-family: var(--body-font);
    color: var(--first-color);
    text-align:justify;
    font-weight: 50;
    font-size:  calc(min(2.5vw,15px)); /*78px;40px; */
    /* text-shadow:1px 1px 7px rgba(249, 91, 212, 0.5); */
    /* border: 1px solid black; */
    width: 700px;
    padding-top:30px;
    padding-left:135px;
    padding-right: 100px;
    /* display:flex;
    justify-content: center; */
    z-index: 1;
}
@media only screen and (max-width: 800px) {
    .description { 
        width: 90%;
        padding-left:5%;
    }
  } 

 a{
    text-decoration:none;
    color:var(--second-color);
}

.line{
    width: 100%;
    max-width:100vw;
    height:10px;
    border-top:1px solid var(--first-color);
} 

.page .portrait {
    padding-top:50px;
    padding-left:135px;
    padding-bottom: 100px;
    width: 700px;
} 
@media only screen and (max-width: 800px) {
    .page .portrait { 
        width: 90%;
        padding-left:5%;
    }
  } 
 
  .project-category {
    font-family: var(--title-font);
    color: var(--first-color);
    text-align:left;
    font-weight: 50;
    font-size: calc(min(7vw, 30px));/* 78px;40px; */
    padding-top:30px;
    padding-left:135px;
    z-index: 1;  
    height:20px; 
    display:flex;
    align-items:flex-end;
}
@media only screen and (max-width: 800px) {
    .project-category{
        padding-left:15px;
        padding-right:15px;
    }  
}  

.container{
    /* width:100vw; */
    /* height:100vh; */
    padding-left:135px;  
    padding-right: 135px; 
    width: 100%;
    box-sizing: border-box;
    display:flex;
    flex-direction:column;
    align-items:center;
    justify-content:center;
    /* background-color: var(--first-color); */
}
@media only screen and (max-width: 800px) {
    .container{
        padding-left: 15px;
        padding-right: 15px;
        
    }  
}  

.inner-container{
    width:calc(100vw - 270px); 
    overflow-x:scroll; 
    scroll-behavior:smooth;
    transition: scroll-left 0.2s ease;
}
@media only screen and (max-width: 800px) {
    .inner-container{
        width:calc(100vw - 40px);
    }  
} 

/* For WebKit browsers (Chrome, Safari) */
.inner-container::-webkit-scrollbar { 
    /* width: 10px; Width of the scrollbar */
     display:none;
} 

.content-box{
    width:2000px;
    display:flex;
    align-items:flex-start;
    gap:20px;
}
@media only screen and (max-width: 800px) {
    .content-box{
        width:1500px;
    }  
}

.card{
    width:600px;
    /* height:340px; */
    /* object-fit: cover; */
    display:flex;
    flex-direction:column;
    align-items:flex-start;
    justify-content:flex-start;
    /* grid-template-rows: subgrid; */
    
}

.card p{
    font-size:70px;
    font-weight:600;
    color:#ffffff;
}

 .project-media {
    width: 100%; /* Ensure the media fits within the box */
    height: 340px; /* Maintain aspect ratio */
   object-fit: cover;
    border-radius: 10px; /* Round corners if needed */
/*    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
   transition: transform 0.2s; /* Smooth hover effect */
  margin-top: 5px;
} 
 .project-media:hover {
    transform: scale(1.02); /* Scale up slightly on hover */
}
@media only screen and (max-width: 800px) {
    .project-media{
        height:270px;
    }  
}


 .project-title{
    font-family:var(--body-font);
    font-size:large;
    font-weight:50;
    text-align: left;
    padding-right:10px;
}
.project-desc{
    font-size:large;
    font-family:var(--body-font);
} 
/* ... */

